--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iSHIT</title>
-    <link rel="stylesheet" href="client/style/bootstrap.css" />
+    <link rel="stylesheet" href="dist/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
@@ -22,6 +22,6 @@
     </style>
   </head>
   <body>
-    <script src="client-bundle.min.js"></script>
+    <script src="dist/client-bundle.js"></script>
   </body>
 </html>
